--- a/package.json
+++ b/package.json
@@ -1,48 +1,45 @@
 {
   "name": "sab-website",
-  "description": "welcome to sab's website idk",
+  "homepage": "https://sab.luminescent.dev",
+  "description": "sab's portfolio website",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=23.11.0"
   },
+  "author": "saboooor",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview",
-    "start": "vite --mode ssr",
-    "start:vite": "vite --mode ssr",
-    "start:vite.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "start": "vite --mode ssr --host",
+    "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "1.3.0",
-    "@builder.io/qwik-city": "1.3.0",
-    "@types/eslint": "8.44.8",
-    "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.55.0",
-    "eslint-plugin-qwik": "1.3.0",
-    "express": "^4.18.2",
-    "path": "^0.12.7",
-    "postcss": "^8.4.32",
-    "qwik-ionicons": "^1.0.5",
-    "rehype-stringify": "^10.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.0.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "5.3.3",
-    "undici": "^6.0.1",
-    "unified": "^11.0.4",
-    "vite": "5.0.7",
-    "vite-tsconfig-paths": "4.2.2",
-    "wrangler": "latest",
-    "zod": "^3.22.4"
+    "@anuragroy/tailwindcss-animate": "^1.0.6",
+    "@builder.io/qwik": "1.13.0",
+    "@builder.io/qwik-city": "1.13.0",
+    "@cloudflare/workers-types": "^4.20250430.0",
+    "@eslint/js": "^9.25.1",
+    "@luminescent/ui": "^1.4.6-0",
+    "@luminescent/ui-qwik": "^1.4.6-0",
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.15.3",
+    "eslint": "^9.25.1",
+    "eslint-plugin-qwik": "1.13.0",
+    "globals": "^16.0.0",
+    "lucide-icons-qwik": "^0.487.0",
+    "tailwindcss": "^4.1.5",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "undici": "^7.8.0",
+    "vite": "5.4.14",
+    "vite-tsconfig-paths": "5.1.4",
+    "qwik-ionicons": "^1.0.5"
   }
 }
