--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
-
 {
   "compilerOptions": {
     "allowJs": true,
-    "target": "ES2022",
-    "module": "es2022",
+    "target": "ES2017",
+    "module": "ES2022",
     "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
     "jsx": "react-jsx",
     "jsxImportSource": "@builder.io/qwik",
@@ -17,11 +16,11 @@
     "isolatedModules": true,
     "outDir": "tmp",
     "noEmit": true,
-    "types": ["node", "vite/client"],
+    "types": ["node", "eslint", "vite/client", "@cloudflare/workers-types"],
     "paths": {
       "~/*": ["./src/*"]
     }
   },
-  "files": ["./.eslintrc.cjs"],
-  "include": ["src"]
+  "files": ["eslint.config.js"],
+  "include": ["src", "./*.d.ts", "./*.js"],
 }
