--- a/saboor.ca/public/manifest.json
+++ b/saboor.ca/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
-  "name": "luminescent-website",
-  "short_name": "luminescent.dev",
+  "name": "saboor-ca",
+  "short_name": "saboor.ca",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0D0D0D",
   "theme_color": "#0D0D0D",
-  "description": "Luminescent Development"
+  "description": "Hi, I'm Saboor. (aka sab)"
 }
