add sab.luminescent.dev for ppl who still find it somehow

--- a/saboor.ca/wrangler.jsonc
+++ b/saboor.ca/wrangler.jsonc
@@ -26,6 +26,10 @@
     {
       "pattern": "www.saboor.ca",
       "custom_domain": true
+    },
+    {
+      "pattern": "sab.luminescent.dev",
+      "custom_domain": true
     }
   ]
 	/**
