--- a/saboor.ca/tsconfig.json
+++ b/saboor.ca/tsconfig.json
@@ -16,7 +16,7 @@
     "isolatedModules": true,
     "outDir": "tmp",
     "noEmit": true,
-    "types": ["node", "eslint", "vite/client", "@cloudflare/workers-types"],
+    "types": ["node", "eslint", "vite/client"],
     "paths": {
       "~/*": ["./src/*"]
     }
