--- a/saboor.ca/package.json
+++ b/saboor.ca/package.json
@@ -35,12 +35,13 @@
     "eslint": "^9.33.0",
     "eslint-plugin-qwik": "1.15.0",
     "globals": "^16.3.0",
-    "lucide-icons-qwik": "^0.533.0",
+    "lucide-icons-qwik": "^0.540.0",
+    "simple-icons-qwik": "^15.11.2",
     "tailwindcss": "^4.1.12",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.40.0",
     "undici": "^7.14.0",
-    "vite": "7.1.2",
+    "vite": "7.1.3",
     "vite-tsconfig-paths": "5.1.4",
     "wrangler": "^4.31.0"
   }
