--- a/saboor.ca/package.json
+++ b/saboor.ca/package.json
@@ -7,7 +7,7 @@
   },
   "author": "LuminescentDev",
   "scripts": {
-    "build": "qwik build",
+    "build": "wrangler types && qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
